# pitaya-net

./: Cargo.toml  README.md
backend/: Cargo.toml  Descriptif table.csv
backend/sql/article/: add_article.sql  add_comment.sql  get_article.sql  get_articles.sql  get_comments.sql  get_feed_articles.sql  get_tags.sql  update_article.sql
backend/sql/comment/: add_comment.sql  get_comments.sql
backend/sql/container/: add_container.sql  get_container_by_id.sql  get_containers.sql  update_container.sql
backend/sql/review/: add_review.sql  delete_review.sql  get_review_by_id.sql  get_reviews.sql  update_review.sql
backend/sql/schema/: article.sql  comment.sql  container.sql  review.sql  user.sql
backend/sql/user/: add_user.sql  get_current_user_by_token.sql  get_current_user_by_username.sql  get_user_by_email.sql  get_user_by_email_and_password.sql  get_user_by_username.sql  get_user_profile.sql  get_users.sql  update_user.sql
backend/src/: errors.rs  main.rs  pitayaconfig.rs
backend/src/article/: mod.rs  models.rs  routes.rs
backend/src/comment/: models.rs  routes.rs
backend/src/container/: models.rs  routes.rs
backend/src/review/: models.rs  routes.rs
backend/src/user/: models.rs  routes.rs
backend/src/utils/: mod.rs  token.rs  utils.rs
frontend/: Cargo.toml  Makefile.toml  build_wasm.sh  index.html
frontend-gifi/: Cargo.toml  index.html  main.js  package-lock.json
frontend-gifi/src/: app.rs  lib.rs
frontend-gifi/src/components/: file_upload.rs  footer.rs  header.rs  review_list.rs  review_preview.rs
frontend-gifi/src/routes/: mod.rs  profile.rs
frontend-gifi/src/routes/home/: banner.rs  main_view.rs
frontend-gifi/src/services/: articles.rs  mod.rs  requests.rs
frontend-gifi/src/types/: mod.rs  review.rs
frontend-gifi/static/: frontend.js  frontend_bg.wasm  index.html.old  package.json
frontend/src/components/: article_preview.rs
frontend/src/routes/: mod.rs  settings.rs
frontend/src/services/: auth.rs  requests.rs
frontend/src/types/: auth.rs
yew-review/: Cargo.toml  Makefile.toml
yew-review/src/: app.rs  index.html  lib.rs
yew-review/src/components/: file_upload.rs  header.rs  mod.rs  review_preview.rs  reviews.rs
yew-review/src/models/: review.rs
yew-review/src/routes/: mod.rs
yew-review/src/routes/home/: banner.rs  main_view.rs  mod.rs
yew-review/src/services/: mod.rs  requests.rs  review.rs
yew-review/src/types/: mod.rs
yew-review/static/: gallery-list-route.css  index.html  package.json  yew-review.js  yew-review_bg.wasm
