[package]
name = "frontend-gifi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1


[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dotenv_codegen = "0.15.0"
gloo = "0.7.0"
lazy_static = "1.4.0"
log = "0.4.17"
parking_lot = "0.12.0"
pulldown-cmark = "0.9.1"
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.31"
yew = "0.19.3"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
wasm-bindgen = "0.2.80"
wasm-logger = "0.2.0"
wee_alloc = "0.4.5"
config = "0.13.2"
makers = "0.7.0"

[dependencies.web-sys]
version = "0.3.57"
features = [
  "Document",
  "Element",
  "Node",
  "Window",
  "HtmlCollection",
  "HtmlInputElement",
]

[dev-dependencies]
js-sys = "0.3.57"
wasm-bindgen-futures = "0.4.30"
wasm-bindgen-test = "0.3.30"
gloo-utils = "0.1.3"
