[package]
name = "yew-review"
version = "0.1.0"
authors = ["Jeannick GRONDIN"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = "0.19.3"
wasm-bindgen = "0.2.80"
serde = "1"
serde_derive = "1"
serde_json = "1"
anyhow = "1"
yew-router = "0.16.0"
yew-hooks = "0.1.56"
reqwest = { version = "0.11.10", features = ["json"] }
gloo = "0.7.0"
gloo-net = "0.2.4"
wasm-bindgen-futures = "0.4.33"
parking_lot = "0.12.1"
lazy_static = "1.4.0"
thiserror = "1.0.37"
log = "0.4.17"
